Ajuste inicial do shadow

--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
                             <div class="row color-row">
                                 <label for="box-color">Box Cor</label>
                                 <div class="text-2">
-                                    <input id="box-color" class="colorpicker" type="text" value="#20124d">
+                                    <input id="box-color" class="colorpicker" type="text" value="#FFFFFF">
                                 </div>
                             </div>
                         </div>
@@ -132,7 +132,7 @@
                             <div class="row color-row">
                                 <label for="shadow-color">Cor da Sombra</label>
                                 <div class="text-2">
-                                    <input id="shadow-color" class="colorpicker" type="text" value="#b4a7d6">
+                                    <input id="shadow-color" class="colorpicker" type="text" value="#BCBCBC">
                                 </div>
                             </div>
                         </div>
@@ -141,7 +141,7 @@
                             <div class="row color-row">
                                 <label for="background-color">Cor do Background</label>
                                 <div class="text-2">
-                                    <input id="background-color" class="colorpicker" type="text" value="#444444">
+                                    <input id="background-color" class="colorpicker" type="text" value="#FFFFFF">
                                 </div>
                             </div>
                         </div>
@@ -182,7 +182,7 @@
                 <div class="card">
                     <div class="card-header title">Resultado</div>
                     <div class="card-body box-content">
-                        <div id="box-shadow-wrapper" class="box-row" style="background-color: rgb(68, 68, 68);">
+                        <div id="box-shadow-wrapper" class="box-row" style="background-color: rgb(255, 255, 255);">
                             <div id="box-shadow-panel box-shadow-modify">
                                 <div id="box-shadow-object"></div>
                             </div>
@@ -268,9 +268,10 @@
                     </button>
                 </div>
                 <div class="modal-body">
-                    <strong>Código copiado para área de transferência!</strong><br>
-                    Agora é só colar em seu CSS ou na tag <span class="text-danger">Style</span> do seu html, modificar
-                    o nome da classe <span class="text-danger">[.sua-classe]</span> e já estará funcionando.
+                    <h4>Código copiado para área de transferência!</h4><br>
+                    Agora é só colar em seu <span class="text-danger">CSS</span> ou na tag <span
+                        class="text-danger">Style</span> do seu html, modificar
+                    o nome da classe <span class="text-danger">( .sua-classe )</span> e já estará funcionando.
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-secondary" data-dismiss="modal">Fechar</button>
