--- a/index.html
+++ b/index.html
@@ -214,44 +214,25 @@
                         </a>
                         <small class="d-block mb-3 text-muted">© 2021</small>
                     </div>
-                    <div class="col-6 col-md">
-                        <h5>Features</h5>
-                        <ul class="list-unstyled text-small">
-                            <li><a class="text-muted" href="#">Algo legal</a></li>
-                            <li><a class="text-muted" href="#">Feature aleatória</a></li>
-                            <li><a class="text-muted" href="#">Recursos para times</a></li>
-                            <li><a class="text-muted" href="#">Coisas para desenvolvedores</a></li>
-                            <li><a class="text-muted" href="#">Outra coisa legal</a></li>
-                            <li><a class="text-muted" href="#">Último item</a></li>
-                        </ul>
-                    </div>
-                    <div class="col-6 col-md">
-                        <h5>Fontes</h5>
-                        <ul class="list-unstyled text-small">
-                            <li><a class="text-muted" href="#">Fonte</a></li>
-                            <li><a class="text-muted" href="#">Nome da fonte</a></li>
-                            <li><a class="text-muted" href="#">Outra fonte</a></li>
-                            <li><a class="text-muted" href="#">Fonte final</a></li>
-                        </ul>
-                    </div>
-                    <div class="col-6 col-md">
-                        <h5>Fontes</h5>
-                        <ul class="list-unstyled text-small">
-                            <li><a class="text-muted" href="#">Negócios</a></li>
-                            <li><a class="text-muted" href="#">Educação</a></li>
-                            <li><a class="text-muted" href="#">Governo</a></li>
-                            <li><a class="text-muted" href="#">Jogos</a></li>
-                        </ul>
-                    </div>
-                    <div class="col-6 col-md">
-                        <h5>Sobre</h5>
-                        <ul class="list-unstyled text-small">
-                            <li><a class="text-muted" href="#">Equipe</a></li>
-                            <li><a class="text-muted" href="#">Locais</a></li>
-                            <li><a class="text-muted" href="#">Privacidade</a></li>
-                            <li><a class="text-muted" href="#">Termos</a></li>
-                        </ul>
-                    </div>
+                    <ul class="nav  nav-pills">
+                        <li class="nav-item"><a class="nav-link" href="#">Box Shadow</a></li>
+                        <li class="nav-item"><a class="nav-link" href="#">Gradient</a></li>
+                        <li class="nav-item"><a class="nav-link" href="#">Border Radius</a></li>
+                        <li class="nav-item"><a class="nav-link" href="#">Lorem Ipsum</a></li>
+                        <li class="nav-item"><a class="nav-link" href="#">Lorem Ipsum IMG</a></li>
+                        <li class="nav-item dropdown">
+                            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
+                                data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                                <i class="fas fa-bars"></i>
+                            </a>
+                            <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                                <a class="dropdown-item" href="#">Ação</a>
+                                <a class="dropdown-item" href="#">Outra ação</a>
+                                <div class="dropdown-divider"></div>
+                                <a class="dropdown-item" href="#">Algo mais aqui</a>
+                            </div>
+                        </li>
+                    </ul>
                 </div>
             </footer>
         </div>
