--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
                     <div class="mt-2">
                         <button id="copy-code" class="btn btn-block btn-primary">Copiar Código</button>
                     </div>
-                    <div id="box-shadow-code" class="mt-3 mb-3 border p-3 rounded"></div>
+                    <div id="box-shadow-code" class="mt-3 mb-3"></div>
                 </div>
             </div>
 
