--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
                                     style="left: 0%;"></a>
                             </div>
                             <!-- CONFIG VERTICAL LENGTH -->
-                            <div class="row mtop15">
+                            <div class="row mt-3">
                                 <label for="vertical-length">Tamanho Vertical</label>
                                 <label class="align-right" for="vertical-length">px</label>
                                 <div class="text-1">
@@ -105,7 +105,7 @@
                                     style="left: 36%;"></a>
                             </div>
                             <!-- CONFIG BLUR RADIUS SPREAD RADIUS-->
-                            <div class="row mtop15">
+                            <div class="row mt-3">
                                 <label for="spread-field">Tamanho do Raio</label>
                                 <label class="align-right" for="spread-field">px</label>
                                 <div class="text-1">
@@ -121,7 +121,7 @@
                         <!-- CONFIG BOX COLOR -->
                         <div class="block-config">
                             <div class="row color-row">
-                                <label for="box-color">Box Cor</label>
+                                <label for="box-color">Cor de Fundo do Box</label>
                                 <div class="text-2">
                                     <input id="box-color" class="colorpicker" type="text" value="#FFFFFF">
                                 </div>
