--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
                             <div class="row mt-2">
                                 <label for="border-color">Cor da borda</label>
                                 <div class="text-2">
-                                    <input id="border-color" class="colorpicker" type="text" value="#000000">
+                                    <input id="border-color" class="colorpicker" type="text" value="#FFFFFF">
                                 </div>
                             </div>
                         </div>
@@ -186,7 +186,7 @@
                                 <label for="vertical-length">Tamanho Vertical</label>
                                 <label class="align-right" for="vertical-length">px</label>
                                 <div class="text-1">
-                                    <input id="vertical-length" type="text" value="0" disabled>
+                                    <input id="vertical-length" type="text" value="45" disabled>
                                 </div>
                             </div>
                             <div id="slider-vertical-bs" class="slider-bar large" data-value="0" data-min="-200"
@@ -199,7 +199,7 @@
                                 <label for="blur-radius">Propriedade Blur Radius</label>
                                 <label class="align-right" for="blur-radius">px</label>
                                 <div class="text-1">
-                                    <input id="blur-radius" type="text" value="36" disabled>
+                                    <input id="blur-radius" type="text" value="55" disabled>
                                 </div>
                             </div>
                             <div id="slider-blur-bs" class="slider-bar large" data-value="80" data-min="0"
@@ -210,7 +210,7 @@
                                 <label for="spread-field">Tamanho do Raio</label>
                                 <label class="align-right" for="spread-field">px</label>
                                 <div class="text-1">
-                                    <input id="spread-field" type="text" value="36" disabled>
+                                    <input id="spread-field" type="text" value="0" disabled>
                                 </div>
                             </div>
                             <div id="slider-spread-field" class="slider-bar large" data-value="0" data-min="-200"
